--- a/belajar.css
+++ b/belajar.css
@@ -1,6 +1,6 @@
 p{
     font: normal normal normal 100% arial, verdana, sans-serif;
-    color: rgb(22, 255, 1);
+    color: red;
     text-align: center;
     text-decoration: wavy;
     background-image: url(Black-3D-Blocks-iphone.jpg);
